--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* Estilos del header */
+body {
+	margin: 0;
+}
+
 .header {
     margin: 0;
     padding: 5px;
@@ -14,13 +18,6 @@
 .logoheader{
 	width: 300px;
 }
-.menu {
-
-}
-
-.navbar {
-    
-}
 
 .listamenu {
 
@@ -30,7 +27,8 @@
 }
 
 .menu-item {
-    margin: 10px;
+    margin-left: 25px;
+	margin-right: 25px;
 }
 
 .item-menu {
@@ -38,9 +36,7 @@
 	color: white;
 	letter-spacing: 1px;
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-	font-weight: ;
-}
+    font-size: 20px;}
 
 /*Estilos del main*/
 
@@ -67,24 +63,13 @@
 
 }
 
-.titulo {
-    display: flex;
-    flex-direction: column;
-}
-
-.titulo-simple {
-    display: flex;
-    flex-direction: row;
-    justify-content: baseline;
-    align-items: baseline;
-
-}
 .titulopartido {
     margin: 0;
     padding: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
+	height: 100px;
 }
 
 .titulo1 {
@@ -126,6 +111,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+	overflow: hidden;
 }
 
 .texto {
@@ -135,10 +121,18 @@
 	font-weight: 600;
 }
 
+.texto-buscador {
+	width: 90%;
+	text-align: center;
+}
+
 .boton-buscador {
     margin: 5px;
     margin-bottom: 25px;
     display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	width: 90%;
     align-items: center;
 
 }
@@ -159,8 +153,9 @@
 }
 
 .button-large {
-    width: 290px;
-    border-radius: 5px;
+    width: 451px;
+	height: 56px;
+	border-radius: 5px;
     background-color: #FFE350;
     font-family:'Poppins', sans-serif;
     color: black;
@@ -171,7 +166,7 @@
 .button-borrar {
     width: 100px;
     border-radius: 5px;
-    background-color: grey;
+    background-color: #E0E0E0;
     font-family:'Poppins', sans-serif;
     color: black;
     font-size: 1rem;
@@ -223,14 +218,22 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+	
 }
 
 .card-carrusel {
     margin: 25px;
     padding: 0;
-
 }
 
+.img-carrusel{
+	transition: 0.5s;
+	object-fit: cover;
+}
+
+.img-carrusel:hover {
+	transform: scale(1.1)
+}
 .div-form {
     margin-top: 20px;
     margin-bottom: 80px;
@@ -251,12 +254,29 @@
     flex-direction: row;
 }
 
+.formulario {
+	display: flex;
+	flex-direction: row;
+}
 
 .form-item {
     margin: 10px;
     display: flex;
     justify-content: space-between;
+}
 
+.input {
+	padding: 20px;
+	border-style: solid 1px;
+	border-radius: 10px;
+	width: 300px;
+	border-color: black;
+}
+
+.botones-form {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
 
 /*_Estilos del Footer*/
@@ -297,11 +317,12 @@
 
 .foot {
     margin: 10px;
-
     padding: 5px;
+	text-decoration: none;
+}
 
-
-
+.foot:hover {
+	color: #FFEE96;
 }
 
 
@@ -325,7 +346,7 @@
 
 }
 .subtitulo-red {
-    color: brown;
+    color: #CE2135;
     font-family:'Poppins', sans-serif;
 	font-weight: 800;
     font-size: 75px;
@@ -335,7 +356,8 @@
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 32px;
-    text-align: justify;
+    text-align:start;
+	width: 80%;
 }
 
 /*Estilos div Tendencias*/
@@ -363,7 +385,7 @@
 }
 
 .card-artistas {
-    margin: 5px;
+    margin: 10px;
     padding: 0px;
     width: auto;
     height: auto;
@@ -372,9 +394,11 @@
     justify-content: space-between;
     border-radius: 5%;
     background-color: white;
+	overflow: hidden;
 }
 
 .sub-card {
+	padding-left: 30px;
     font-family: 'Poppins', sans-serif;
     font-size: 25px;
     color: black;
@@ -382,6 +406,7 @@
 }
 
 .sub-estilo {
+	padding-left: 30px;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: black;
@@ -390,9 +415,46 @@
 }
 
 .lugar {
+	padding-left: 30px;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     color: black;
     font-weight:normal;
 
+}
+
+
+/*Estilos Frame Ciruelo*/
+
+.titulo-style {
+	font-family: 'Abril Fatface', cursive;
+    color: white;
+    font-size: 62px;
+}
+
+.banda {
+	margin: 10px;
+	padding: 50px;
+	width: auto;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+}
+
+.cards-banda {
+	display: flex;
+	flex-direction: row;
+	
+}
+
+.discos {
+	display: flex;
+	flex-direction: column;
+	
+}
+
+.cards-discos {
+	
+	display: flex;
+	flex-direction: row;
 }
