--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+	position:fixed;
 }
 
 .logoheader{
@@ -29,6 +30,11 @@ body {
 .menu-item {
     margin-left: 25px;
 	margin-right: 25px;
+	text-decoration: none;
+}
+
+.menu-item:hover {
+	background-color: #D63447;
 }
 
 .item-menu {
@@ -36,7 +42,35 @@ body {
 	color: white;
 	letter-spacing: 1px;
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;}
+    font-size: 20px;
+}
+
+@media screen and (max-width: 1200px){
+	
+}
+
+@media screen and (max-width: 768px){
+	.header {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.registrate {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 480px){
+	.menu-item {
+	  margin-left: 5px;
+	  margin-right: 5px;
+	}
+	.item-menu {
+    font-size: 13px;
+	}
+
+}
 
 /*Estilos del main*/
 
@@ -57,6 +91,7 @@ body {
 
 .inicio {
     padding: 2%;
+	padding-top: 150px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -114,6 +149,10 @@ body {
 	overflow: hidden;
 }
 
+.img-buscador {
+	width: 100%;
+}
+
 .texto {
     font-family: 'Poppins', sans-serif;
     color: black;
@@ -164,7 +203,7 @@ body {
 }
 
 .button-borrar {
-    width: 100px;
+    width: 120px;
     border-radius: 5px;
     background-color: #E0E0E0;
     font-family:'Poppins', sans-serif;
@@ -227,6 +266,7 @@ body {
 }
 
 .img-carrusel{
+	width: 110%;
 	transition: 0.5s;
 	object-fit: cover;
 }
@@ -267,7 +307,7 @@ body {
 
 .input {
 	padding: 20px;
-	border-style: solid 1px;
+	border-style: ridge;
 	border-radius: 10px;
 	width: 300px;
 	border-color: black;
@@ -312,7 +352,7 @@ body {
 .texto-white {
     font-family:'Poppins', sans-serif;
     color: white;
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .foot {
@@ -323,6 +363,27 @@ body {
 
 .foot:hover {
 	color: #FFEE96;
+}
+
+@media screen and (max-width: 1200px) {
+	
+}
+
+@media screen and (max-width: 768px) {
+	
+	.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+	}
+	.division {
+		display: none;
+	}
+	.preg {
+		display: none;
+	}
 }
 
 
@@ -360,7 +421,11 @@ body {
 	width: 80%;
 }
 
-/*Estilos div Tendencias*/
+.link-bandas {
+	text-decoration: none;
+}
+
+/*Estilos divs del Main Artistas*/
 
 .subtitulos-frameartistas {
 	margin: 10px;
@@ -378,10 +443,10 @@ body {
     padding: 50px;
     width: auto;
     height: auto;
-    display: flex;
-    flex-direction: row;
-	justify-content: space-between;
-	align-content: center;
+	display: grid;
+/*	grid-template-columns: repeat (5, 1fr); -- ESTE NO ME FUNCIONÓ*/
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	gap: 10px;
 }
 
 .card-artistas {
@@ -392,9 +457,23 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 5%;
+    border-radius: 20px;
     background-color: white;
 	overflow: hidden;
+	transtion: 0.5s;
+	object-fit: cover;
+}
+
+.card-artistas:hover {
+	transform: scale(1.1)
+}
+.img-carrusel{
+	transition: 0.5s;
+	object-fit: cover;
+}
+
+.img-carrusel:hover {
+	transform: scale(1.1)
 }
 
 .sub-card {
@@ -424,6 +503,45 @@ body {
 }
 
 
+@media screen and (max-width: 1200px) {
+	.subtitulo-red {
+		font-weight: 600;
+		font-size: 45px;
+	}
+	
+	.texto-normal {
+		font-size: 22px;
+	}
+	.subtitulos-frameartistas {
+    font-size: 35px;
+    font-weight: 400;    
+	}
+	
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 10px;
+}
+}
+
+@media screen and (max-width: 768px) {
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 10px;
+	}
+	
+}
+
+@media screen and (max-width: 480px) {
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 10px;
+	}
+	
+}
+
 /*Estilos Frame Ciruelo*/
 
 .titulo-style {
@@ -447,6 +565,17 @@ body {
 	
 }
 
+.texto-banda {
+	font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 32px;
+    text-align:start;
+	width: 80%;
+	padding-left: 50px;
+	margin: 10px;
+}
+
+
 .discos {
 	display: flex;
 	flex-direction: column;
@@ -454,7 +583,35 @@ body {
 }
 
 .cards-discos {
-	
+	margin: 10px;
+	padding: 50px;
 	display: flex;
 	flex-direction: row;
+	justify-content: space-around;
 }
+
+
+.sub-banda { 
+    font-family: 'Poppins', sans-serif;
+    font-size: 35px;
+    color: white;
+}
+
+.sub-fecha {
+	font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    color: white;
+	font-weight: 300;
+}
+
+.div-redes {
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: flex-start;
+	width: 80%;
+	height: auto;
+	margin: 10px;
+	padding: 100px;
+}
+
