--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* Estilos del header */
 body {
 	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .header {
@@ -13,7 +15,8 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-	position:fixed;
+    position:fixed;
+    z-index: 10;
 }
 
 .logoheader{
@@ -45,33 +48,6 @@ body {
     font-size: 20px;
 }
 
-@media screen and (max-width: 1200px){
-	
-}
-
-@media screen and (max-width: 768px){
-	.header {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		align-items: center;
-	}
-	.registrate {
-		display: none;
-	}
-}
-
-@media screen and (max-width: 480px){
-	.menu-item {
-	  margin-left: 5px;
-	  margin-right: 5px;
-	}
-	.item-menu {
-    font-size: 13px;
-	}
-
-}
-
 /*Estilos del main*/
 
 .main {
@@ -90,7 +66,6 @@ body {
 /*Estilos Div Inicio*/
 
 .inicio {
-    padding: 2%;
 	padding-top: 150px;
     display: flex;
     flex-direction: row;
@@ -121,7 +96,119 @@ body {
     font-size: 180px;
 }
 
+/*Animación Hand*/
+@-webkit-keyframes rotateInUpLeft {
+  from {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    transform: rotate3d(0, 0, 1, 45deg);
+    opacity: 0;
+  }
 
+  to {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes rotateInUpLeft {
+  from {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    transform: rotate3d(0, 0, 1, 45deg);
+    opacity: 0;
+  }
+
+  to {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+.rotateInUpLeft {
+  -webkit-animation-name: rotateInUpLeft;
+  animation-name: rotateInUpLeft;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+/*Animación Rockearla*/
+@-webkit-keyframes jackInTheBox {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(0.1) rotate(30deg);
+    transform: scale(0.1) rotate(30deg);
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes jackInTheBox {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(0.1) rotate(30deg);
+    transform: scale(0.1) rotate(30deg);
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+
+  70% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.jackInTheBox {
+  -webkit-animation-name: jackInTheBox;
+  animation-name: jackInTheBox;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 /*Estilos Div Buscadores*/
 
 .buscadores {
@@ -231,9 +318,6 @@ body {
 
 }
 
-.titulo-carrusel {
-    
-}
 
 .sub-carrusel{
 	font-family:'Poppins', sans-serif;
@@ -365,39 +449,19 @@ body {
 	color: #FFEE96;
 }
 
-@media screen and (max-width: 1200px) {
-	
-}
-
-@media screen and (max-width: 768px) {
-	
-	.footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-	}
-	.division {
-		display: none;
-	}
-	.preg {
-		display: none;
-	}
-}
-
 
 /*ESTILOS FRAME ARTISTAS*/
 
 .main-artistas {
     margin: 0;
     padding: 5px;
+	padding-top: 100px;
     height: auto;
     width: 100%;
     background-color: #263238;
 }
 
-.intro {
+.intro-frame {
     margin: 10px;
     padding: 50px;
     width: auto;
@@ -503,45 +567,6 @@ body {
 }
 
 
-@media screen and (max-width: 1200px) {
-	.subtitulo-red {
-		font-weight: 600;
-		font-size: 45px;
-	}
-	
-	.texto-normal {
-		font-size: 22px;
-	}
-	.subtitulos-frameartistas {
-    font-size: 35px;
-    font-weight: 400;    
-	}
-	
-	.div-artistas {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	gap: 10px;
-}
-}
-
-@media screen and (max-width: 768px) {
-	.div-artistas {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 10px;
-	}
-	
-}
-
-@media screen and (max-width: 480px) {
-	.div-artistas {
-	display: grid;
-	grid-template-columns: 1fr;
-	gap: 10px;
-	}
-	
-}
-
 /*Estilos Frame Ciruelo*/
 
 .titulo-style {
@@ -559,10 +584,28 @@ body {
 	flex-direction: column;
 }
 
+.img-banda img {
+	border-radius: 5%;
+}
+
+.foto-banda {
+		width: 100%;
+	}
+
 .cards-banda {
 	display: flex;
 	flex-direction: row;
-	
+	flex-wrap: wrap;
+	margin-top: 20px;
+	gap: 20px;
+}
+
+.img-card {
+	width: 300px;
+	height: 300px;
+	object-fit: cover;
+	overflow: hidden;
+	border-radius: 5%;
 }
 
 .texto-banda {
@@ -590,7 +633,14 @@ body {
 	justify-content: space-around;
 }
 
+.card-disco {
+	width: 30%;
+}
 
+.img-disco {
+	width: 100%;
+	height: 100%;
+}
 .sub-banda { 
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
@@ -611,7 +661,164 @@ body {
 	align-items: flex-start;
 	width: 80%;
 	height: auto;
-	margin: 10px;
-	padding: 100px;
+	margin-bottom: 10%;
 }
 
+.main-intro {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: auto;
+}
+
+.intro {
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 100vh;
+	background-image: url("img/fondo-intro.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.img-intro {
+	width: 70%;
+    height: auto;
+    padding-top: 200px;
+    padding-bottom: 50px;
+	padding-left: 20%;
+}
+
+@-webkit-keyframes zoomInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+  }
+}
+
+@keyframes zoomInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+    transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+    transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+    -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+  }
+}
+
+.zoomInUp {
+  -webkit-animation-name: zoomInUp;
+  animation-name: zoomInUp;
+}
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@media screen and (max-width: 1200px) {
+	.item-menu {
+    font-size: 18px;
+	}
+	.subtitulo-red {
+		font-weight: 600;
+		font-size: 45px;
+	}
+	
+	.texto-normal {
+		font-size: 22px;
+	}
+	.subtitulos-frameartistas {
+    font-size: 35px;
+    font-weight: 400;    
+	}
+	
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 10px;
+    }
+
+	
+}
+
+@media screen and (max-width: 600px) {
+	.header {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.menu-item {
+	  margin-left: 5px;
+	  margin-right: 5px;
+	}
+	.item-menu {
+    font-size: 16px;
+	}
+	.registrate {
+		display: none;
+	}
+	.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+	}
+	.division {
+		display: none;
+	}
+	.preg {
+		display: none;
+	}
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 10px;
+	}
+	.sub-banda {
+		font-size: 16px;
+	}
+	.img-card {
+		width: 150px;
+		height: 150px;
+	}
+	.subdiv-redes {
+		display: flex;
+		flex-direction: row;
+	}
+	.red {
+		width: 90%;
+	}
+	.div-artistas {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 10px;
+	}
+	.finde {
+		display: none;
+	}
+}
