--- a/style.css
+++ b/style.css
@@ -676,7 +676,7 @@ body {
 	padding: 0px;
 	width: 100%;
 	height: 100vh;
-	background-image: url("img/fondo-intro.svg");
+	background-image: url("img/fondo-intro-2.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
